--- a/index.html
+++ b/index.html
@@ -5,35 +5,35 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>EJG TROP</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Artista urbano / Urban Art Graffiti • ilustração">
   <link rel="shortcut icon" href="favicon.ico">
-  <link rel="canonical" href="index.html">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://ejgtrop.com/">
   <meta name="referrer" content="no-referrer-when-downgrade">
-
   <meta property="og:site_name" content="EJG TROP">
   <meta property="og:type" content="website">
   <meta property="og:title" content="EJG TROP">
   <meta property="og:description" content="Artista urbano / Urban Art Graffiti • ilustração">
+  <style>
+    body,
+    html {
+      height: 100%;
+      margin: 0;
+      background-color: #88c345;
+    }
+
+    .bg {
+      background-image: url("bg.gif");
+      height: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+  </style>
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col text-center">
-        <h1>EJG TROP</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col text-center">
-        Artista urbano / Urban Art Graffiti • ilustração
-      </div>
-    </div>
-    <div class="row mt-4">
-    </div>
-  </div>
+  <div class="bg"></div>
 </body>
+
 </html>
